# azure-multiregion-aks-cluster

./: README.md
.docs/: .gitignore  multiregion-aks.drawio  solution.drawio  source.md
.github/workflows/: docker-image-poll.yml  docker-image-vote.yml  docker-image.yml
frontend/: app.vue
infrastructure/: .gitignore  .terraform.lock.hcl  main.tf  variables.tf
infrastructure/azure/: main.tf  variables.tf
infrastructure/azure/network/: main.tf  output.tf  variables.tf
infrastructure/azure/scripts/: tools.sh
infrastructure/azure/workload/: main.tf  output.tf
infrastructure/development/: .terraform.lock.hcl  main.tf  variables.tf
infrastructure/helm/: main.tf  variables.tf
infrastructure/kubernetes/: .terraform.lock.hcl  main.tf  output.tf  variables.tf
infrastructure/modules/aks/: main.tf  outputs.tf  variables.tf
infrastructure/modules/cosmos/: main.tf  (+2 more)
infrastructure/network/: main.tf  variables.tf
kubernetes/: kubernetes.yaml
kubernetes/azure/: azure-workload-identity.yaml
kubernetes/minikube/: mongo.yaml
microservices/: .gitignore  docker-compose.yaml  kubernetes.yaml  mongo.yaml  nginx-ingress.yaml  readme.md
microservices/__config__/: dev-secrets.env  sample-secrets.env
microservices/configuration/: dev-secrets.env  empty-secrets.env
microservices/core/: README.md  pyproject.toml
microservices/core/src/: keyvault.py
microservices/core/src/epomatti_aksmrc_core/: __init__.py  utils.py
microservices/poll/: .pylintrc  Dockerfile  Pipfile
microservices/vote/: .flaskenv  Dockerfile  Pipfile  readme.md
testing/: insomnia.json
(+65 files in other folders)
