[tool.poetry]
name = "epomatti_aksmrc_core"
version = "0.1.7"
description = "Shared code for my multi region AKS cluster microservices."
authors = ["Evandro Pomatti <evandro.pomatti@gmail.com>"]
repository = "https://github.com/epomatti/azure-multiregion-aks-cluster"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.1.1"
azure-identity = "^1.10.0"
azure-keyvault-secrets = "^4.4.0"
Flask = "^2.1.2"
Cerberus = "^1.3.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
